--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Cocktails</h1>
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);"> -->
   <div class="container">
     <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
     <p>Change your life and learn to code at one of our campuses around the world.</p>
@@ -8,8 +7,10 @@
 </div>
 
 <% @cocktails.each do |cocktail| %>
+
   <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
 <% end %>
 
 
 <%= link_to "Create a cocktail", new_cocktail_path %>
+
