--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -3,6 +3,6 @@
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
   <%= f.association :ingredient %>
-  <%= f.submit, class: "btn btn-primary"%>
+  <%= f.button :submit, class: "btn btn-primary"%>
 <% end %>
 
