--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,14 @@
-<h1><%= @cocktail.name %></h1>
+<h1 class="text-center"><%= @cocktail.name %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
 
 <% @cocktail.doses.each do |dose| %>
-  <p> <%= dose.ingredient.name %> </p>
+  <p> <%=dose.description %><%= dose.ingredient.name %> </p>
   <%= link_to "Delete ingredient", dose_path(dose), method: :delete, data: { confirm: "Are you sure?"} %>
 <% end %>
 
 <%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail) %>
+    </div>
+  </div>
+</div>
