Did some more stuff lol

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: black;
+  background-color: black;
+
 }
+
+
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
@@ -9,4 +12,5 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+  background-color:black;
 }
