--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -7,4 +7,23 @@ background-color: black;
 color:white;
 }
 
+h1, h2, h3, h4, p{
+  color:red;
+}
 
+a {
+  text-decoration: none;
+  color:red;
+}
+a:hover {
+  text-decoration:none;
+  color: #992005;
+}
+
+.drink-grid {
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+  margin: 0 48px;
+
+}
