--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mb-4"><%= @cocktail.name %></h1>
+<h1 class="mb-4"><%= @cocktail.name %></h1>
 <div class="container">
   <div class="row">
     <div class="col-12">
