--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,12 @@
 <nav class="navbar navbar-lewagon navbar-expand-lg navbar-light bg-light">
   <%= link_to "Home", root_path, class: "navbar-brand" %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <h2 id = "bar-name"> The Cocky Vagabond</h2>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <%= link_to "Add a cocktail", new_cocktail_path, class: "navbar-brand" %>
-
       </li>
     </ul>
   </div>
